<resources>

    <string name="app_name" translatable="false">Projet Calcul Mental</string>
    <string name="backToHome"> Back to home page </string>
    <string name="backToLastPage"> Back to previous page </string>

    <!--    MainActivity    -->
    <string name="play"> Play </string>
    <string name="highScoreButton"> High Score </string>
    <string name="aboutButton"> About </string>

    <!--    DifficultyActivity    -->
    <string name="easy"> Easy </string>
    <string name="medium"> Medium </string>
    <string name="hard"> Hard </string>
    <string name="impossible"> Impossible </string>
    <string name="choose_difficulty_to_play"> Choose a difficulty for your game </string>

    <!--    DifficultyHighScoreActivity    -->
    <string name="choose_difficulty_to_show"> Choose a difficulty where you want to see the high score </string>

    <!--    CalculMentalActivity    -->
    <string name="life"> Life : </string>
    <string name="score"> Score : </string>
    <string name="calcul"> The calculation will be displayed here </string>
    <string name="answer"> Your answer </string>
    <string name="bad_response"> Wrong answer </string>
    <string name="good_response"> Right answer </string>
    <string name="poorly_written_answer"> Your answer is badly written </string>
    <string name="game_will_be_paused"> The game will be paused on the next calculation </string>
    <string name="substract_error"> You can only put a - at the beginning of your answer ! </string>
    <string name="dot_start_error"> Your answer cannot start with a dot ! </string>
    <string name="dot_2_error"> Your answer cannot contain 2 dot ! </string>
    <string name="remove_nothing_error"> There is nothing to delete ! </string>
    <string name="loose"> You lost ! </string>
    <string name="time_left"> Time left : </string>
    <string name="time_is_up"> Time is up ! </string>

    <string name="bouton_0" translatable="false"> 0 </string>
    <string name="bouton_1" translatable="false"> 1 </string>
    <string name="bouton_2" translatable="false"> 2 </string>
    <string name="bouton_3" translatable="false"> 3 </string>
    <string name="bouton_4" translatable="false"> 4 </string>
    <string name="bouton_5" translatable="false"> 5 </string>
    <string name="bouton_6" translatable="false"> 6 </string>
    <string name="bouton_7" translatable="false"> 7 </string>
    <string name="bouton_8" translatable="false"> 8 </string>
    <string name="bouton_9" translatable="false"> 9 </string>
    <string name="bouton_result" translatable="false"> = </string>
    <string name="bouton_dot" translatable="false"> . </string>
    <string name="bouton_remove" translatable="false"> del </string>
    <string name="bouton_substract" translatable="false"> - </string>
    <string name="bouton_clear" translatable="false"> AC </string>
    <string name="bouton_pause" translatable="false"> pause </string>

    <!--    RegistrationActivity    -->
    <string name="pseudo"> Your pseudo </string>
    <string name="saveScore"> Save your score </string>
    <string name="yourScore"> Your score : </string>
    <string name="empty_pseudo_error"> Pseudo cannot be empty </string>
    <string name="too_long_pseudo_error"> Pseudo must be less than 30 characters </string>
    <string name="contains_invalid_character"> Pseudo contains invalid character </string>
    <string name="score_registred"> The score has been saved </string>

    <!--    HighScoreActivity    -->
    <string name="bestScorePseudo"> Pseudo : </string>
    <string name="bestScoreScore"> Score : </string>
    <string name="no_score"> There is no score for this difficulty </string>

    <!--    AboutActivity    -->
    <string name="aboutText" translatable="false"> Créé par : \n
    - LEFRANCOIS Killian \n
    - PINCHON Enzo \n\n

    Features en plus : \n
    - Plusieurs difficultés (Avec des générateurs de calcul avancé) \n
    - Version anglaise et française du jeu \n
    - Affichage du meilleur score par joueur et par difficulté \n
    - Un système de temps (60 secondes par partie) \n
    - Pouvoir mettre pause au jeu \n
    - Un logo d\'application et design avancé \n
    - Pouvoir quitter l\'application (sans l\'éteindre) \n
        pendant la partie et pouvoir retourner dessus
    - Protection contre l\'erreur et bouton AC/DEL \n
    - Protection contre la triche \n
        (Faire un retour en arrière dans le menu
        d\'enregistrement ne ramène pas sur le jeu
        mais sur la page d\'accueil)
    </string>

</resources>