<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DifficultyActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/choose_difficulty_to_play"
        android:textColor="@color/white"
        tools:paddingRight="10dp"
        android:textAlignment="center"
        android:textSize="25sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/boutonEasy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy" />

        <Button
            android:id="@+id/boutonMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <Button
            android:id="@+id/boutonHard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard" />

        <Button
            android:id="@+id/boutonImpossible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/impossible" />

        <Button
            android:id="@+id/backToHomeDifficultyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backToHome" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>