<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/yourScoreTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yourScore" />

        <EditText
            android:id="@+id/pseudoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pseudo"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/saveTheScoreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveScore" />

        <Button
            android:id="@+id/backToHomeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backToHome" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>